[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/bluebookopen.png" type="Texture" id=1]
[ext_resource path="res://Sprites/blackbookshut.png" type="Texture" id=2]
[ext_resource path="res://Sprites/blackbookopen.png" type="Texture" id=3]
[ext_resource path="res://Sprites/bluebookshut.png" type="Texture" id=4]
[ext_resource path="res://Sprites/greenbookopen.png" type="Texture" id=5]
[ext_resource path="res://Sprites/redbookshut.png" type="Texture" id=6]
[ext_resource path="res://Sprites/redbookopen.png" type="Texture" id=7]
[ext_resource path="res://Sprites/greenbookshut.png" type="Texture" id=8]
[ext_resource path="res://Books.gd" type="Script" id=9]

[node name="Books" type="HBoxContainer"]
custom_constants/separation = 16
script = ExtResource( 9 )

[node name="RedBookButton" type="TextureButton" parent="."]
margin_right = 32.0
margin_bottom = 32.0
hint_tooltip = "Multiply your sunflower costs and generation by amount of sunflowers"
toggle_mode = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )

[node name="BlueBookButton" type="TextureButton" parent="."]
margin_left = 48.0
margin_right = 80.0
margin_bottom = 32.0
hint_tooltip = "Multiply your pinkflower costs and generation by amount of pinkflowers"
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 1 )

[node name="GreenBookButton" type="TextureButton" parent="."]
margin_left = 96.0
margin_right = 128.0
margin_bottom = 32.0
hint_tooltip = "Multiply your white flowers costs and generation by amount of white flowers"
toggle_mode = true
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 5 )

[node name="BlackBookButton" type="TextureButton" parent="."]
margin_left = 144.0
margin_right = 176.0
margin_bottom = 32.0
hint_tooltip = "Boost your clicking power (x10)"
toggle_mode = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )

[connection signal="toggled" from="RedBookButton" to="." method="_on_RedBookButton_toggled"]
[connection signal="toggled" from="BlueBookButton" to="." method="_on_BlueBookButton_toggled"]
[connection signal="toggled" from="GreenBookButton" to="." method="_on_GreenBookButton_toggled"]
[connection signal="toggled" from="BlackBookButton" to="." method="_on_BlackBookButton_toggled"]
